--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Download proxy for Gauge",
   "main": "index.js",
   "scripts": {
-    "serve": "netlify-lambda install src/lambda; netlify-lambda serve src/lambda"
+    "serve": "netlify-lambda install src/lambda; netlify-lambda serve src/lambda",
+    "build": "netlify-lambda build src/lambda"
   },
   "repository": {
     "type": "git",
