Add config to redirect to plugins

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [[redirects]]
-  from = "/templates/*"
-  to = "/.netlify/functions/templates/:splat"
+  from = "/plugin/*"
+  to = "https://cdn.jsdelivr.net/gh/getgauge/gauge-repository@master/:splat-install.json
   status = 200
 [build]
   command = "npm run build"
